# tool_bot

./: .isort.cfg  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
bot/: .env.example  bot.py
bot/config/: settings.py
bot/filters/: __init__.py  is_admin.py
bot/handlers/: __init__.py
bot/handlers/errors/: __init__.py  not_modified.py
bot/handlers/user/: __init__.py  cancel.py  help.py  menu.py  start.py
bot/handlers/youtube/: __init__.py  download.py
bot/jobs/: youtube.py
bot/keyboards/: __init__.py  main_menu.py  youtube.py
bot/keyboards/default/: consts.py
bot/keyboards/inline/: consts.py
bot/keyboards/keyboard_utils/: __init__.py  schema_generator.py
bot/middlewares/: __init__.py  throttling.py
bot/services/: __init__.py  youtube.py
bot/states/: __init__.py  user.py
bot/utils/misc/: __init__.py  logging.py  throttling.py
bot/web_handlers/: tg_updates.py
